# TerrainRenderer

./: CMakeLists.txt
includes/: glad.c
includes/glad/: glad.h
res/shaders/: player.frag  player.vert  terrain.frag
src/: main.cpp
src/util/: Camera.hpp  Player.hpp  Shaders.hpp  SpriteRenderer.hpp  TerrainManager.hpp  WindowManager.hpp  texture.cpp  texture.h
